Fix left timeline marker alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -158,7 +158,7 @@
   background-color: var(--black);
   background-image: url("../images/wireframe.svg");
   animation: 40s linear 0s infinite backgroundscroll;
-  z-index: 1;
+  z-index: 2;
 }
 
 @keyframes backgroundscroll {
@@ -2071,7 +2071,6 @@ span::after {
 }
 
 .timeline-left-marker {
-  padding-bottom: 4vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -2080,6 +2079,17 @@ span::after {
   justify-content: center;
   writing-mode: vertical-lr;
   transform: rotate(-180deg);
+  width: 50%;
+  margin-left: calc((50%) * -1);
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+}
+
+.timeline-right-marker {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
 }
 
 .year-marker {
@@ -2091,7 +2101,7 @@ span::after {
 
 .year-marker-line {
   display: flex;
-  height: 35%;
+  flex: 1 0 0;
   background-color: var(--text_dark);
   width: 1px;
   opacity: 50%;
@@ -2113,12 +2123,9 @@ span::after {
   flex-direction: column;
   align-items: center;
   flex: 0 0 10%;
+  width: 10%;
   margin-right: calc((0.50 * 10%) * -1);
-  margin-left: calc((0.25 * 10%) * -1);
-  /* max-width: 144px; */
 }
-
-
 
 .timeline-horizontal {
   width: 30px;
@@ -2133,6 +2140,14 @@ span::after {
   color: var(--bright_red);
   border-color: var(--bright_red);
   margin: 0;
+  width: 0px;
+}
+
+.timeline-columns {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
 }
 
 .timeline-year-header {
@@ -2194,7 +2209,7 @@ span::after {
 }
 
 .event-between-days {
-  width: 50%;
+  width: 100%;
 }
 
 .event-between-years {
@@ -2409,7 +2424,7 @@ span::after {
 
 .event-outline {
   display: flex;
-  max-width: min(50%, 300px);
+  max-width: 100%;
   padding: 9px 1px 1px 1px;
   background-color: var(--bright_red);
   flex: 1 1 0;
@@ -2469,28 +2484,15 @@ span::after {
   padding: 16px;
 }
 
-@media screen and (min-width: 2200px) { 
+@media screen and (max-width: 850px) { 
 
-  .timeline-year-container {
-    margin-right: -72px;
-    max-width: 144px;
-  }
-
-}
-
-@media screen and (min-width: 1400px) { 
-
-  .event-outline {
-    max-width: 100%;
+  .connector-date {
+    font-size: 10px;
   }
 
 }
 
 @media screen and (max-width: 650px) { 
-
-  .event-outline {
-    max-width: 95%;
-  }
 
   .timeline-left-marker {
     font-size: 18px;
@@ -2535,10 +2537,6 @@ span::after {
 
   .event-line {
     display: none;
-  }
-
-  .timeline-year-container {
-    margin-left: 20px;
   }
 
   .timeline-day-container .right-branch-label {
@@ -2588,6 +2586,7 @@ span::after {
   position: sticky;
   box-sizing: border-box;
   border-right: 1px solid var(--elem_border);
+  z-index: 1;
 }
 
 .sidebar-deploy {
